Clear all cell outputs and update metadata
This commit is necessary simply because the notebook was opened on the machine different than the one it was originally created on.

--- a/colab_digitization.ipynb
+++ b/colab_digitization.ipynb
@@ -1,30 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  },
-  "colab": {
-   "name": "colab_digitization.ipynb",
-   "provenance": [],
-   "collapsed_sections": []
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
@@ -82,9 +56,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "5IyftoBUlS0E"
    },
+   "outputs": [],
    "source": [
     "#@title <=== Please click and wait several seconds to prepare the software environment { display-mode: \"form\" }\n",
     "!apt-get install libzbar0\n",
@@ -335,9 +311,7 @@
     "        print('Błąd funkcji \"hdr\".')\n",
     "\n",
     "    plotingHDR(hdr_out, hdr_type)"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -355,15 +329,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "pTAiLlOD7Hho"
    },
+   "outputs": [],
    "source": [
     "#@title Exercise { display-mode: \"form\" }\n",
     "interact(make_file, select_video = [('Falling fruit','lemon'),('View on street','cariage'),('Reading people','glasses')], frame_rate = IntSlider(min=5, max=150, step=5, continuous_update=False));\n"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -383,27 +357,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "GJ0B5ioUkDfL"
    },
+   "outputs": [],
    "source": [
     "#@title Exercise 1 - run cell and experiment with prepared images { display-mode: \"form\" }\n",
     "interact(cs, image=[('Basic RGB colours','digitization_1/files/3color.jpg'), ('Random shapes', 'digitization_1/files/rgb.jpg'), ('Advantage red color', 'digitization_1/files/red.jpg'), ('Advantage green color', 'digitization_1/files/green.jpg'), ('Advantage blue color', 'digitization_1/files/blue.jpg')], set_channel=[('RGB color space','RGB'),('R','R'),('G','G'),('B','B'),('YCbCr color space','YCbCr'),('Y','Y'),('Cb','Cb'),('Cr','Cr'),('YUV color space','YUV'),('Y','Y_'),('U','U'),('V','V'),('HSV','HSV'),('H','H'),('S','S'),('V','V_')]);"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "KCH9-6jUkDfL"
    },
+   "outputs": [],
    "source": [
     "#@title Exercise 2 - run cell and paste http address of your image { display-mode: \"form\" }\n",
     "interact(cs, image='https://thumbs.dreamstime.com/b/multi-colours-strips-texture-design-165353569.jpg', set_channel=[('RGB color space','RGB'),('R','R'),('G','G'),('B','B'),('YCbCr color space','YCbCr'),('Y','Y'),('Cb','Cb'),('Cr','Cr'),('YUV color space','YUV'),('Y','Y_'),('U','U'),('V','V'),('HSV','HSV'),('H','H'),('S','S'),('V','V_')]);"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -419,27 +393,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "mvYBxlJ5kDfM"
    },
+   "outputs": [],
    "source": [
     "#@title Exercise 1 - experiment with pre-loaded images { display-mode: \"form\" }\n",
     "interact(histogram, image=[('Advantage red color', 'digitization_1/files/red.jpg'),('Advantage green color', 'digitization_1/files/green.jpg'),('Advantage blue color', 'digitization_1/files/blue.jpg'),('Overexposure image','digitization_1/files/overexp.jpg'),('Underexposure image','digitization_1/files/underexp.jpg')]);"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "LGjvGOPtkDfN"
    },
+   "outputs": [],
    "source": [
     "#@title Exercise 2 - run cell and paste http address of your image { display-mode: \"form\" }\n",
     "interact(histogram, image='https://thumbs.dreamstime.com/b/multi-colours-strips-texture-design-165353585.jpg');"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -455,27 +429,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "WsSEEJ7bkDfO"
    },
+   "outputs": [],
    "source": [
     "#@title Exercise 1 - run cell and experiment with pre-loaded images { display-mode: \"form\" }\n",
     "interact(edges, image=[('Random shapes', 'digitization_1/files/shapes.jpg'),('Advantage red color', 'digitization_1/files/red.jpg'),('Advantage green color', 'digitization_1/files/green.jpg'),('Advantage blue color', 'digitization_1/files/blue.jpg'),('Barcode','digitization_1/files/barcode2.jpg'),('QR Code','digitization_1/files/qrcode3.jpg')]);"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "NC_HOOWGkDfP"
    },
+   "outputs": [],
    "source": [
     "#@title Exercise 2 - run cell and paste http address of your image { display-mode: \"form\" }\n",
     "interact(edges, image='https://thumbs.dreamstime.com/b/multi-colours-strips-texture-design-165353532.jpg');"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -488,27 +462,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "fePzFGIikDfQ"
    },
+   "outputs": [],
    "source": [
     "#@title Exercise 1 - Experiment with pre-loaded images { display-mode: \"form\" }\n",
     "interact(scanCodes, image=[('QR 1','digitization_1/files/qrcode1.jpg'),('QR 2','digitization_1/files/qrcode2.jpg'),('QR 3','digitization_1/files/qrcode3.jpg'),('BAR 1','digitization_1/files/barcode1.jpg'),('BAR 2','digitization_1/files/barcode2.jpg'),('BAR 3','digitization_1/files/barcode3.jpg')]);"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "5_f_rhdRkDfR"
    },
+   "outputs": [],
    "source": [
     "#@title Exercise 2 - run cell and paste http address of your image { display-mode: \"form\" }\n",
     "interact(scanCodes, image='https://barcodesgonewild.com/wp-content/uploads/2014/05/Axe-barcode-1.jpeg');"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -741,15 +715,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "170rQRYbkDfY"
    },
+   "outputs": [],
    "source": [
-    "#@title Exercise  - run cell and experiment with pre-loaded images { display-mode: \"form\" }\r\n",
+    "#@title Exercise  - run cell and experiment with pre-loaded images { display-mode: \"form\" }\n",
     "interact(hdr, image=['yosemite','garden','mount'], hdr_type=['robertson','mertens','debevec']);"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "colab_digitization.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
