Improve language; add info regarding requirements
Add open questions

--- a/colab_digitization.ipynb
+++ b/colab_digitization.ipynb
@@ -17,8 +17,9 @@
    },
    "source": [
     "## Introduction\n",
-    "One of the basic tasks in processing and transmitting video signals is signal conversion. In particular, signals are converted from the analogue to digital form. Sometimes, at the same processing stage, visual material acquired is compressed “on-the-fly”. Then it is stored using one of the popular container formats like MP4 or AVI. This fast, “on-the-fly” compression may not be sufficient for some applications. Thus, further recompression is sometimes necessary (e.g., to fit into predefined streaming bandwidth or satisfy maximum file size requirements).<br>\n",
-    "Viewing (i.e., playing) a compressed video requires decompression (most often in real time). Afterwards, moving pictures are transmitted onto a screen (in a digital or, after a conversion, in an analogue form). The processes of digitization and viewing will be performed throughout this exercise."
+    "One of the basic tasks in processing and transmitting video signals is signal conversion. In particular, signals are converted from the analogue to digital form. Sometimes, at the same processing stage, visual material acquired is compressed “on-the-fly.” Then, it is stored using one of the popular container formats like MP4 or AVI. This fast, “on-the-fly” compression may not be sufficient for some applications. Thus, further recompression is sometimes necessary (e.g., to fit into predefined streaming bandwidth or satisfy maximum file size requirements).\n",
+    "\n",
+    "Viewing (i.e., playing) a compressed video requires decompression (most often in real time). Afterwards, moving pictures are transmitted onto a screen (in a digital or, after a conversion, in an analogue form). The processes of digitization and viewing will be performed in the course of this exercise."
    ]
   },
   {
@@ -27,10 +28,10 @@
     "id": "aFVfHxq27CvQ"
    },
    "source": [
-    "## Purpose of the Exercise \n",
-    "The purpose of this exercise is to larn about digitization of analogue video signals (for example, as recorded with your built-in webcam)\n",
+    "## Purpose\n",
+    "The purpose of this exercise is to give you a basic understanding regarding digitization of analogue video signals. An exemplary analogue video signal is a signal recorded with a USB webcam. (Although the analogue version of the video signal is most often not available to the user of the webcam. This is becasue the signal gets digitized in the webcam itself and sent to the computer in this digital version only.)\n",
     "\n",
-    "Simultaneously, you will learn how to play-out the previously created file. For digitization purposes, the built-in webcam of your computer and this Jupyter Notebook will be used."
+    "<font color=red> **Czy to ćwiczenie naprawdę uczy czegoś o cyfryzacji sygnałów analogowych? Jeśli tak to czego konkretnie?**</font>"
    ]
   },
   {
@@ -39,8 +40,10 @@
     "id": "8kINU4Dy7KGw"
    },
    "source": [
-    "## Execution of the Exercise\n",
-    "Please read and execute the whole instruction. The exercise stand should be equipped with a computer having a monitor, camera and an internet connection."
+    "## Requirements\n",
+    "To complete this exercise you will need a computer with an internet connection and, optionally, a camera (if you would like to test algorithms presented here with images of your own).\n",
+    "\n",
+    "**Importantly, this notebook is known to be working in [the Google Colaboratory platform](https://colab.research.google.com/). It will certainly not work if you try to run it locally under Windows. It is also not advisable to try to run it locally under the Linux operation system (although this may be successfull).**"
    ]
   },
   {
