Be more verbose about the setup phase

--- a/colab_digitization.ipynb
+++ b/colab_digitization.ipynb
@@ -53,8 +53,12 @@
    },
    "source": [
     "## Setting Up the Computer\n",
-    "The first time you use this notebook you will be asked to allow it to access your camera.\n",
-    "Please allow the notebook to access the camera to make sure everything works as expected."
+    "The first time you use this notebook you may be asked to allow it to access your camera.\n",
+    "Please allow the notebook to access the camera to make sure everything works as expected.\n",
+    "\n",
+    "The cell below configures appropriately the computer on which this notebook is run. (If you run this through Google Colaboratory then the computer mentioned is some server at Google premises.)\n",
+    "\n",
+    "**Please run the cell below before running any other cell in this notebook.**"
    ]
   },
   {
