Make the "Purpose" section more verbose
Improve the description of the "Experimenting With Frame Rates" section

--- a/colab_digitization.ipynb
+++ b/colab_digitization.ipynb
@@ -29,9 +29,16 @@
    },
    "source": [
     "## Purpose\n",
-    "The purpose of this exercise is to give you a basic understanding regarding digitization of analogue video signals. An exemplary analogue video signal is a signal recorded with a USB webcam. (Although the analogue version of the video signal is most often not available to the user of the webcam. This is becasue the signal gets digitized in the webcam itself and sent to the computer in this digital version only.)\n",
+    "The purpose of this exercise is to give you a basic understanding regarding digitization of analogue video signals. An exemplary analogue video signal is a signal recorded with a USB webcam. (Although the analogue version of the video signal is most often not available to the user of the webcam. This is because the signal gets digitized in the webcam itself and sent to the computer in this digital version only.)\n",
     "\n",
-    "<font color=red> **Czy to ćwiczenie naprawdę uczy czegoś o cyfryzacji sygnałów analogowych? Jeśli tak to czego konkretnie?**</font>"
+    "Below is a list of topics this notebook touches upon:\n",
+    "* frame rate of a video,\n",
+    "* colour spaces,\n",
+    "* picture histogram(s),\n",
+    "* edge detection and\n",
+    "* barcode recognition.\n",
+    "\n",
+    "Note that the last two topics actually show examples of digital image processing (and not the digitization process as such). They are here to show you how the digital version of an image can be used to extract various information (that would be difficult to extract from the analogue version of the image)."
    ]
   },
   {
@@ -326,12 +333,10 @@
     "id": "IiubEhglkDe_"
    },
    "source": [
-    "## Experimenting with frame rates\n",
-    "Please try to change the default frame rate.<br>\n",
+    "## Experimenting With Frame Rates\n",
+    "Please run the cell below to generate versions of various videos with a frame rate of your choice.\n",
     "\n",
-    "<font color=red><b>Mention that the dropdown menu will be visible only after the appropriate code cell is run</b></font>\n",
-    "\n",
-    "From dropdown menu choose one of example videos and set number of frames per second on slide bar. A video file will be downloaded automatically. Please open it and observe changes. Each change will generate another file.<br><br>"
+    "From the dropdown menu (which will be visible once you run the cell below) choose one of example videos and set number of frames per second through the slide bar. A video file will be downloaded automatically. Please open it and observe changes. Please note that each change on the slide bar will generate a new file.<br><br>"
    ]
   },
   {
