Extend the description of the 'Experiment With Color Spaces' section
Fix typos; improve language

--- a/colab_digitization.ipynb
+++ b/colab_digitization.ipynb
@@ -50,7 +50,7 @@
     "## Requirements\n",
     "To complete this exercise you will need a computer with an internet connection and, optionally, a camera (if you would like to test algorithms presented here with images of your own).\n",
     "\n",
-    "**Importantly, this notebook is known to be working in [the Google Colaboratory platform](https://colab.research.google.com/). It will certainly not work if you try to run it locally under Windows. It is also not advisable to try to run it locally under the Linux operation system (although this may be successfull).**"
+    "**Importantly, this notebook is known to be working in [the Google Colaboratory platform](https://colab.research.google.com/). It will certainly not work if you try to run it locally under Windows. It is also not advisable to try to run it locally under the Linux operating system (although this may be successful).**"
    ]
   },
   {
@@ -76,7 +76,7 @@
    },
    "outputs": [],
    "source": [
-    "#@title <=== Please click and wait several seconds to prepare the software environment { display-mode: \"form\" }\n",
+    "#@title <== Please click this and wait several seconds as we prepare your software environment { display-mode: \"form\" }\n",
     "!apt-get install libzbar0\n",
     "!pip3 install pyzbar\n",
     "import matplotlib.pyplot as pyplot\n",
@@ -359,12 +359,9 @@
    "source": [
     "## Experiment With Color Spaces\n",
     "\n",
-    "Please try to change the default colour space for loaded image. Please observe the relation between the image colours and colour space.<br>\n",
+    "Please execute the first cell below and experiment with different colour spaces (by choosing RGB, YUV, YCbCr or HSV in the *set_channel* dropdown menu). Please note what happpens when you ask the programme to convert the input to a colour space of choice. Does this influence the way the image looks?\n",
     "\n",
-    "At first click inside code-block and click Run button in navigate panel.\n",
-    "\n",
-    "<font color=red><b>What do you mean by \"advantage red colour\"?</b></font><br>\n",
-    "<font color=blue><b>Chciałem zaznaczyć, że na tym zdjęciu przeważa kolor czerwony (w kanale RED jest najwięcej pikseli o wysokich wartościach)</b></font>"
+    "Now, experiment with the programme asking it to display the output image using only one colour channel of a given colour space. For example, by choosing 'R' in the *set_channel* dropdown menu you ask the programme to display only the 'R' channel of the RGB colour space. Does this operation influence the way the output image looks? Do you understand why the output looks as it does? (If not everything is clear please contact the lecturer or look for more information regarding the colour spaces we use here on-line.)"
    ]
   },
   {
@@ -380,6 +377,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you are done experimenting with the cell above you can run the cell below to load any image available on-line and apply to it the same set of transformations. 😊"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -387,7 +391,7 @@
    },
    "outputs": [],
    "source": [
-    "#@title Exercise 2 - run cell and paste http address of your image { display-mode: \"form\" }\n",
+    "#@title Exercise 2 - run the cell and paste the http address of your image { display-mode: \"form\" }\n",
     "interact(cs, image='https://thumbs.dreamstime.com/b/multi-colours-strips-texture-design-165353569.jpg', set_channel=[('RGB color space','RGB'),('R','R'),('G','G'),('B','B'),('YCbCr color space','YCbCr'),('Y','Y'),('Cb','Cb'),('Cr','Cr'),('YUV color space','YUV'),('Y','Y_'),('U','U'),('V','V'),('HSV','HSV'),('H','H'),('S','S'),('V','V_')]);"
    ]
   },
