--- a/colab_digitization.ipynb
+++ b/colab_digitization.ipynb
@@ -361,7 +361,9 @@
     "\n",
     "Please execute the first cell below and experiment with different colour spaces (by choosing RGB, YUV, YCbCr or HSV in the *set_channel* dropdown menu). Please note what happpens when you ask the programme to convert the input to a colour space of choice. Does this influence the way the image looks?\n",
     "\n",
-    "Now, experiment with the programme asking it to display the output image using only one colour channel of a given colour space. For example, by choosing 'R' in the *set_channel* dropdown menu you ask the programme to display only the 'R' channel of the RGB colour space. Does this operation influence the way the output image looks? Do you understand why the output looks as it does? (If not everything is clear please contact the lecturer or look for more information regarding the colour spaces we use here on-line.)"
+    "Now, experiment with the programme asking it to display the output image using only one colour channel of a given colour space. For example, by choosing 'R' in the *set_channel* dropdown menu you ask the programme to display only the 'R' channel of the RGB colour space. Does this operation influence the way the output image looks? Do you understand why the output looks as it does? (If not everything is clear please contact the lecturer or look for more information regarding the colour spaces we use here on-line.)\n",
+    "\n",
+    "<font color=red>**TODO @gpasterczyk:**</font> Proszę opisać różnicę w efekcie konwersji dla kanałów R, G i B z przestrzeni kolorów RGB względem konwersji do pojedynczych kanałów innych przestrzeni kolorów (HSV, YUV, YCbCr)."
    ]
   },
   {
