Unify section names

--- a/colab_digitization.ipynb
+++ b/colab_digitization.ipynb
@@ -333,7 +333,7 @@
     "id": "IiubEhglkDe_"
    },
    "source": [
-    "## Experimenting With Frame Rates\n",
+    "## Frame Rate\n",
     "Please run the cell below to generate versions of various videos with a frame rate of your choice.\n",
     "\n",
     "From the dropdown menu (which will be visible once you run the cell below) choose one of example videos and set number of frames per second through the slide bar. A video file will be downloaded automatically. Please open it and observe changes. Please note that each change on the slide bar will generate a new file.<br><br>"
@@ -357,7 +357,7 @@
     "id": "DyFNrzgIkDfK"
    },
    "source": [
-    "## Experiment With Color Spaces\n",
+    "## Colour Spaces\n",
     "\n",
     "Please execute the first cell below and experiment with different colour spaces (by choosing RGB, YUV, YCbCr or HSV in the *set_channel* dropdown menu). Please note what happpens when you ask the programme to convert the input to a colour space of choice. Does this influence the way the image looks?\n",
     "\n",
@@ -403,7 +403,7 @@
     "id": "AxZGd6ZwkDfM"
    },
    "source": [
-    "## Experimenting With Picture Histogram\n",
+    "## Picture Histogram\n",
     "This demo uses the 2-D Histogram in Image Processing to calculate the histograms of R, G, and B values.\n",
     "\n",
     "Click inside code-block and click Run button in navigate panel."
@@ -439,7 +439,7 @@
     "id": "FnOL7G7hkDfO"
    },
    "source": [
-    "## Experimenting with Edge Detection\n",
+    "## Edge Detection\n",
     "The Canny method is applied to find the edges of objects in the input images\n",
     "\n",
     "Click inside code-block and click Run button in navigate panel."
@@ -475,7 +475,7 @@
     "id": "AyxMt9VOkDfP"
    },
    "source": [
-    "## Experimenting with Barcode Recognition"
+    "## Barcode Recognition"
    ]
   },
   {
