Add TODOs to gpasterczyk
Ask to pay close attention to the Cb channel for blue objects

--- a/colab_digitization.ipynb
+++ b/colab_digitization.ipynb
@@ -361,9 +361,13 @@
     "\n",
     "Please execute the first cell below and experiment with different colour spaces (by choosing RGB, YUV, YCbCr or HSV in the *set_channel* dropdown menu). Please note what happpens when you ask the programme to convert the input to a colour space of choice. Does this influence the way the image looks?\n",
     "\n",
-    "Now, experiment with the programme asking it to display the output image using only one colour channel of a given colour space. For example, by choosing 'R' in the *set_channel* dropdown menu you ask the programme to display only the 'R' channel of the RGB colour space. Does this operation influence the way the output image looks? Do you understand why the output looks as it does? (If not everything is clear please contact the lecturer or look for more information regarding the colour spaces we use here on-line.)\n",
+    "Now, experiment with the programme asking it to display the output image using only one colour channel of a given colour space. For example, by choosing 'R' in the *set_channel* dropdown menu you ask the programme to display only the 'R' channel of the RGB colour space. Does this operation influence the way the output image looks? Do you understand why the output looks as it does? (If not, please contact the lecturer or look for more information regarding the colour spaces we use here on-line.)\n",
     "\n",
-    "<font color=red>**TODO @gpasterczyk:**</font> Proszę opisać różnicę w efekcie konwersji dla kanałów R, G i B z przestrzeni kolorów RGB względem konwersji do pojedynczych kanałów innych przestrzeni kolorów (HSV, YUV, YCbCr)."
+    "Please pay special attention to blue objects when displaing just the Cb channel (a.k.a. 'blue difference') of the YCbCr colour space. Note that the blue objects are significantly whiter than other objects. (The same can be observed for red objects and the Cr channel.)\n",
+    "\n",
+    "<font color=red>**TODO @gpasterczyk:**</font> Proszę opisać różnicę w efekcie konwersji dla kanałów R, G i B z przestrzeni kolorów RGB względem konwersji do pojedynczych kanałów innych przestrzeni kolorów (HSV, YUV, YCbCr). (Ta pierwsza skutkuje w kolorowym obrazku, natomiast pozostałe dają obrazy w odcieniach szarości.)\n",
+    "\n",
+    "<font color=red>**TODO @gpasterczyk:**</font> Proszę także napisać jaki kolor odpowiada jakiej wartości. Innymi słowy, gdy widzę biały kolor na obrazie w odcianiach szarości to czy to odpowiada wartości minimalnej (zapewne 0), czy wartości maksymalnej (zapewne 255). To jest kluczowe dla interpretacji obrazków. 😊"
    ]
   },
   {
