Add a hint regarding the report in the Frame Rate section

--- a/colab_digitization.ipynb
+++ b/colab_digitization.ipynb
@@ -384,7 +384,11 @@
     "## Frame Rate\n",
     "Please run the cell below to generate versions of various videos with a frame rate of your choice.\n",
     "\n",
-    "From the dropdown menu (which will be visible once you run the cell below) choose one of example videos and set number of frames per second through the slide bar. A video file will be downloaded automatically. Please open it and observe changes. Please note that each change on the slide bar will generate a new file.<br><br>"
+    "From the dropdown menu (which will be visible once you run the cell below) choose one of example videos and set number of frames per second through the slide bar. A video file will be downloaded automatically. Please open it and observe changes. Please note that each change on the slide bar will generate a new file.\n",
+    "\n",
+    "<font color=blue>Report: </font>Please compare videos with the following frame rates and write\n",
+    "down your conclusions in the report: 5, 15, 25, 50, 100 and 150. Can you see any difference between 100\n",
+    "and 150 FPS (frames per second) versions of the video?"
    ]
   },
   {
