Improve language of the Colour Spaces section
and add hints regarding the report

--- a/colab_digitization.ipynb
+++ b/colab_digitization.ipynb
@@ -417,18 +417,30 @@
     "\n",
     "Please pay special attention to blue objects when displaing just the Cb channel (a.k.a. 'blue difference') of the YCbCr colour space. Note that the blue objects are significantly whiter than other objects. (The same can be observed for red objects and the Cr channel.)\n",
     "\n",
-    "<b>How to interpretate output image?</b><br>\n",
-    "As you know, each pixel in RGB colour space has 3 values, 1 for each channel (3 channels: R, G, B). Grayscale images have only 1 channel and 1 value for each pixel. Output images in RGB you can see in colour, because we use all 3 channels. It means, when present RED channel, values for GREEN and BLUE are zeros(0) and so on with rest of channels.<br>\n",
-    "For other colour spaces we use grayscale. Each pixel with value 0 is black. If value is groving, pixels are lighter and close to maximum (in our case 255) are white. \n",
+    "<b>How to Interpret Output Images?</b><br>\n",
+    "As you know, each pixel in the RGB colour space has three values, one for each channel (Red, Green and Blue). Grayscale images have only one channel and one value for each pixel.\n",
     "\n",
-    "<b>YCbCr colour space calculating each channel</b><br>\n",
-    "$Y'=K_R*R'+K_G*G'+K_B*B'$\n",
+    "Output images (in the code cell below) for a single channel (e.g., the Y channel\n",
+    "from the YCbCr colour space) are shown as grayscale images. Pixels with the value\n",
+    "of 0 are black. Pixels with higher values are brighter, and those close to the\n",
+    "maximum value (255) are white. The only exception to this rule are output\n",
+    "images for R, G and B channels of the RGB colour space. Those are shown as\n",
+    "true-colour images with all irrelevant channels set to 0. For example, when\n",
+    "displaying the ouput image for the R channel, G and B channels in the output\n",
+    "image are set to 0.\n",
     "\n",
-    "$P_B=\\frac{1}{2}\\frac{B'*Y'}{1-K_B}$\n",
+    "<b>RGB to YCbCr Conversion</b><br>\n",
+    "The equations below help interpret images using the YCbCr colour space. (Due to\n",
+    "historical reasons Cb and Cr channels are sometimes referred to as Pb and Pr\n",
+    "channels, respectively.)\n",
     "\n",
-    "$P_R=\\frac{1}{2}\\frac{R'*Y'}{1-K_R}$\n",
+    "$Y'=K_R*R'+K_G*G'+K_B*B'$,\n",
     "\n",
-    "where KR, KG, and KB are ordinarily derived from the definition of the corresponding RGB space, and required to satisfy $K_R+K_G+K_B = 1$"
+    "$P_B=\\frac{1}{2}\\frac{B'-Y'}{1-K_B}$,\n",
+    "\n",
+    "$P_R=\\frac{1}{2}\\frac{R'-Y'}{1-K_R}$,\n",
+    "\n",
+    "where $K_R$, $K_G$, and $K_B$ are ordinarily derived from the definition of the corresponding RGB space, and required to satisfy $K_R+K_G+K_B = 1$."
    ]
   },
   {
@@ -476,6 +488,23 @@
     "#@title Exercise 2 - run the cell and paste the http address of your image { display-mode: \"form\" }\n",
     "interact(cs, image='https://thumbs.dreamstime.com/b/multi-colours-strips-texture-design-165353569.jpg', set_channel=[('RGB color space','RGB'),('R','R'),('G','G'),('B','B'),('YCbCr color space','YCbCr'),('Y','Y'),('Cb','Cb'),('Cr','Cr'),('YUV color space','YUV'),('Y','Y_'),('U','U'),('V','V'),('HSV','HSV'),('H','H'),('S','S'),('V','V_')]);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<font color=blue>Report :</font>Please include in the report an exemplary image\n",
+    "and its version with only the Y channel available (from either YCbCr or YUV\n",
+    "colour spaces). Is content of the image clearly visible when we only retain the\n",
+    "Y channel? Does it look like an image from the black-and-white TV era? Please\n",
+    "answer those questions in your report.\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
