Add hints for the report
Improve formatting; improve language; add descriptions

--- a/colab_digitization.ipynb
+++ b/colab_digitization.ipynb
@@ -492,12 +492,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "<font color=blue>Report :</font>Please include in the report an exemplary image\n",
+    "<font color=blue>Report: </font>Please include in the report an exemplary image\n",
     "and its version with only the Y channel available (from either YCbCr or YUV\n",
     "colour spaces). Is content of the image clearly visible when we only retain the\n",
     "Y channel? Does it look like an image from the black-and-white TV era? Please\n",
-    "answer those questions in your report.\n",
-    "\n"
+    "answer those questions in your report.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -544,14 +543,30 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "<font color=blue>Report: </font>Please select one image and its histogram and\n",
+    "describe in your own words what is the content of the histogram (e.g., What is the\n",
+    "meaning of the axes? How many curves are in the histgoram? Why? Is the shape\n",
+    "of the curves resembling the uniform distribution?)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "FnOL7G7hkDfO"
    },
    "source": [
     "## Edge Detection\n",
-    "The Canny method is applied to find the edges of objects in the input images\n",
+    "The Canny method is applied to find the edges of objects in the input images.\n",
     "\n",
-    "Click inside code-block and click Run button in navigate panel."
+    "Click inside the code cells and click the Run button on the left to perform\n",
+    "the exercise."
    ]
   },
   {
@@ -580,11 +595,27 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "<font color=blue>Report: </font>Please think of a potential application of edge\n",
+    "detection. Then briefly describe your proposition in the report."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "AyxMt9VOkDfP"
    },
    "source": [
-    "## Barcode Recognition"
+    "## Barcode Recognition\n",
+    "\n",
+    "This is an example of a more advanced image processing algorithm. It detects\n",
+    "region of interest (RoI) that contains a barcode."
    ]
   },
   {
@@ -610,6 +641,20 @@
     "#@title Exercise 2 - run cell and paste http address of your image { display-mode: \"form\" }\n",
     "interact(scanCodes, image='https://barcodesgonewild.com/wp-content/uploads/2014/05/Axe-barcode-1.jpeg');"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<font color=blue>Report: </font> Please upload an image with a QR code and check\n",
+    "whether the code above properly recognises its content. Add to your report both\n",
+    "the image you uploaded and the result of running the code."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
